--- a/catalog.html
+++ b/catalog.html
@@ -7,8 +7,8 @@
   <body>
   <header class="page-header" data-test="header">
      <nav class="navigation">
-       <a class="navigation-link" class="header-logo">
-        <img src="#" width="140" height="70" alt="Логотип сайта">
+       <a class="navigation-link" href="index.html">
+        <img src="images/svg/logo-header.svg" width="140" height="70" alt="Логотип сайта">
        </a>
        <ul class="navigation-list">
         <li class="navigation-item">
@@ -137,7 +137,7 @@
      </div>
      <ul class="card-list">
       <li class="card-item">
-        <img src="#" width="300" height="212" alt="Amara Resort & Spa">
+        <img src="images/hotel-1.jpg" width="300" height="212" alt="Amara Resort & Spa">
         <h3 class="card-item-title">Amara Resort & Spa</h3>
         <span class="card-item-type">Гостиница</span>
         <span class="card-item-price">От 4000 ₽</span>
@@ -149,7 +149,7 @@
         <p class="card-item-rating">Рейтинг: 8,5</p>
       </li>
       <li class="card-item">
-        <img src="#" width="300" height="212" alt="Villas at Poco Diablo">
+        <img src="images/hotel-2.jpg" width="300" height="212" alt="Villas at Poco Diablo">
         <h3 class="card-item-title">Villas at Poco Diablo</h3>
         <span class="card-item-type">Гостиница</span>
         <span class="card-item-price">От 5000 ₽</span>
@@ -161,7 +161,7 @@
         <p class="card-item-rating">Рейтинг: 9,2</p>
       </li>
       <li class="card-item">
-        <img src="#" width="300" height="212" alt="Desert Quail Inn">
+        <img src="images/hotel-3.jpg" width="300" height="212" alt="Desert Quail Inn">
         <h3 class="card-item-title">Desert Quail Inn</h3>
         <span class="card-item-type">Гостиница</span>
         <span class="card-item-price">От 2500 ₽</span>
@@ -173,7 +173,7 @@
         <p class="card-item-rating">Рейтинг: 6,9</p>
       </li>
       <li class="card-item">
-        <img src="#" width="300" height="212" alt="GreenTree Inn">
+        <img src="images/hotel-4.jpg" width="300" height="212" alt="GreenTree Inn">
         <h3 class="card-item-title">GreenTree Inn</h3>
         <span class="card-item-type">Гостиница</span>
         <span class="card-item-price">От 1500 ₽</span>
@@ -208,21 +208,32 @@
      <ul class="footer-social-list">
       <li class="footer-social-item">
         <a class="footer-social-link" href="#">
+          <svg class="footer-social-icon" width="22" height="14">
+                <use xlink:href="images/svg/vk.svg"></use>
+              </svg>
           <span class="visually-hidden">Вконтакте</span>
         </a>
       <li class="footer-social-item">
         <a class="footer-social-link" href="#">
+          <svg class="footer-social-icon" width="18" height="16">
+                <use xlink:href="images/svg/telegram.svg"></use>
+              </svg>
           <span class="visually-hidden">Telegram</span>
         </a>
       <li class="footer-social-item">
         <a class="footer-social-link" href="#">
+          <svg class="footer-social-icon" width="22" height="17">
+                <use xlink:href="images/svg/YouTube.svg"></use>
+              </svg>
           <span class="visually-hidden">YouTube</span>
         </a>
       </li>
      </ul>
      <a class="footer-contact-link" href="tel:+78128121212">+7 (812) 812-12-12</a>
-     <a class="footer-logo" href="#">
-      <img src="#" width="115" height="33" alt="Логотип сайта">
+     <a class="footer-logo" href="https://htmlacademy.ru">
+      <svg class="footer-logo-icon" width="115" height="33">
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/svg/logo-footer.svg"></use>
+          </svg>
      </a>
     </footer>
   </body>
