--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <body>
     <header class="page-header" data-test="header">
      <nav class="navigation">
-       <a class="navigation-link" class="header-logo">
-        <img src="#" width="140" height="70" alt="Логотип сайта">
+       <a class="navigation-link" href="index.html">
+        <img src="images/svg/logo-header.svg" width="140" height="70" alt="Логотип сайта">
        </a>
        <ul class="navigation-list">
         <li class="navigation-item active">
@@ -40,7 +40,7 @@
     <main data-test="main">
       <section class="hero" data-test="hero">
         <h1 class="visually-hidden">Седона-городок в Аризоне</h1>
-        <img src="#" width="458" height="352" alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!">
+        <img src="images/svg/welcome.svg" width="458" height="352" alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!">
       </section>
       <section class="advantages" data-test="advantages">
         <h2 class="advantages-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
@@ -49,7 +49,7 @@
           <li class="advantages-item">
             <h3>Настоящий городок</h3>
             <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img src="#" width="800" height="385" alt="Вид из окна на город">
+            <img src="images/photo-1.jpg" width="800" height="385" alt="Вид из окна на город">
           </li>
           <li class="advantages-item">
             <h3>Небольшая площадь</h3>
@@ -66,7 +66,7 @@
           <li class="advantages-item">
             <h3>Там есть мост дьявола</h3>
             <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-            <img src="#" width="800" height="385" alt="Место дьявола">
+            <img src="images/photo-2.jpg" width="800" height="385" alt="Место дьявола">
           </li>
         </ul>
         <article class="advantages-bonus">
@@ -106,22 +106,33 @@
     <footer class="page-footer" data-test="footer">
      <ul class="footer-social-list">
       <li class="footer-social-item">
-        <a class="footer-social-link" href=" https://vk.com/htmlacademy">
+        <a class="footer-social-link" href="#">
+          <svg class="footer-social-icon" width="22" height="14">
+                <use xlink:href="images/svg/vk.svg"></use>
+              </svg>
           <span class="visually-hidden">Вконтакте</span>
         </a>
       <li class="footer-social-item">
-        <a class="footer-social-link" href="https://t.me/htmlacademy ">
+        <a class="footer-social-link" href="#">
+          <svg class="footer-social-icon" width="18" height="16">
+                <use xlink:href="images/svg/telegram.svg"></use>
+              </svg>
           <span class="visually-hidden">Telegram</span>
         </a>
       <li class="footer-social-item">
-        <a class="footer-social-link" href="https://www.youtube.com/user/htmlacademyru">
+        <a class="footer-social-link" href="#">
+          <svg class="footer-social-icon" width="22" height="17">
+                <use xlink:href="images/svg/YouTube.svg"></use>
+              </svg>
           <span class="visually-hidden">YouTube</span>
         </a>
       </li>
      </ul>
      <a class="footer-contact-link" href="tel:+78128121212">+7 (812) 812-12-12</a>
-     <a class="footer-logo" href="#">
-      <img src="#" width="115" height="33" alt="Логотип сайта">
+     <a class="footer-logo" href="https://htmlacademy.ru">
+      <svg class="footer-logo-icon" width="115" height="33">
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/svg/logo-footer.svg"></use>
+          </svg>
      </a>
     </footer>
   </body>
