--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h2 class="advantages-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
         <p class="advantages-text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         <ul class="advantages-list">
-          <li class="advantages-item advantages-item-first">
+          <li class="advantages-item-image">
             <div class="advantages-wrapper">
             <h3>Настоящий городок</h3>
             <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
@@ -64,7 +64,7 @@
             <h3>Небольшая площадь</h3>
             <p>Все достопримечательности находятся очень близко</p>
           </li>
-          <li class="advantages-item advantages-item-second">
+          <li class="advantages-item">
             <h3>Красивая дорога</h3>
             <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
@@ -72,8 +72,8 @@
             <h3>Мало туристов</h3>
             <p>Большинство едет в Гранд Каньон и толпится там</p>
           </li>
-          <li class="advantages-item advantages-item-first">
-             <div class="advantages-wrapper order">
+          <li class="advantages-item-image advantages-item-reverse ">
+             <div class="advantages-wrapper">
             <h3>Там есть мост дьявола</h3>
             <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             </div>
