--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <section class="search" data-test="search">
         <h2>Заинтересовались?</h2>
         <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class= "button-primary search-link" href="#">Поиск Гостиницы в Седоне</a>
+        <a class= "button button-primary search-link" href="#">Поиск Гостиницы в Седоне</a>
       </section>
       <section class="subscription" data-test="subscribe">
         <h2>Подпишитесь на рассылку</h2>
