--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
   <body>
   <header class="page-header" data-test="header">
      <nav class="navigation">
-       <a class="navigation-link" href="#">
+       <a class="navigation-logo" href="#">
         <img src="images/svg/logo-header.svg" width="140" height="70" alt="Логотип сайта Седона">
        </a>
        <ul class="navigation-list">
@@ -41,7 +41,7 @@
           </a>
         </li>
        </ul>
-       <a class="navigation-user-link button button-primary" href="#">Хочу сюда!</a>
+       <a class="button button-primary navigation-user-button" href="#">Хочу сюда!</a>
      </nav>
     </header>
     <main class="main-catalog" data-test="main">
@@ -50,7 +50,7 @@
         <h1>Гостиницы Седоны</h1>
         <ul class="breadcrumbs-list">
           <li class="breadcrumbs-item">
-            <a class="breadcrumbs-link" href="index.html">
+            <a class="breadcrumbs-link link-home" href="index.html">
               <object type="image/svg+xml" data="images/svg/breadecrumbs-home.svg">
              <img src="images/svg/breadecrums-home.svg" alt="На главную">
         </object>
@@ -65,7 +65,7 @@
       <section class="catalog-filter" data-test=" filter">
         <h2 class="visually-hidden">Фильтр гостиниц</h2>
         <form action="https://echo.htmlacademy.ru/" method="get">
-        <fieldset class="filter-group">
+        <fieldset class="filter-group infrastrukture">
           <legend class="group-title">Инфраструктура:</legend>
           <ul class="group-list">
             <li class="group-item">
@@ -82,7 +82,7 @@
             </li>
           </ul>
         </fieldset>
-        <fieldset class="filter-group">
+        <fieldset class="filter-group type-housing">
           <legend class="group-title">Тип жилья:</legend>
           <ul class="group-list">
             <li class="group-item">
@@ -99,7 +99,7 @@
             </li>
           </ul>
         </fieldset>
-        <fieldset class="filter-group">
+        <fieldset class="filter-group price">
           <legend class="group-title">Стоимость, ₽:</legend>
           <div class="price-input">
             <label for="from">От</label>
@@ -119,11 +119,10 @@
         </form>
       </section>
     </div>
-
-    <section class="cards" data-test="catalog">
+   <section class="cards" data-test="catalog">
      <div class="cards-sorting">
       <p class="sorting-result">Найдено гостиниц: 38</p>
-     <select name="sorting" id="sorting">
+     <select class="sorting" name="sorting" id="sorting">
       <option value="value1" selected>Сначала дешевые</option>
       <option value="value2" selected>Сначала дорогие</option>
      </select>
@@ -160,20 +159,20 @@
         <h3 class="cards-item-title">Amara Resort & Spa</h3>
         <span class="cards-item-type">Гостиница</span>
         <span class="cards-item-price">От 4000 ₽</span>
-        <a class="button-primary button" href="#">Подробнее</a>
-        <a class="button-secondary button" href="#">В избранное</a>
+        <a class="button button-primary" href="#">Подробнее</a>
+        <a class="button button-secondary" href="#">В избранное</a>
         <div class="stars stars-four">
           <span class="visually-hidden">Звёзды</span>
         </div>
         <p class="cards-item-rating">Рейтинг: 8,5</p>
       </li>
-      <li class="cardss-item">
+      <li class="cards-item">
         <img src="images/hotel-2.jpg" width="300" height="212" alt="Villas at Poco Diablo">
         <h3 class="cards-item-title">Villas at Poco Diablo</h3>
         <span class="cards-item-type">Гостиница</span>
         <span class="cards-item-price">От 5000 ₽</span>
-        <a class="button-primary button" href="#">Подробнее</a>
-        <a class="button-active button" href="#">В избранном</a>
+        <a class="button button-primary" href="#">Подробнее</a>
+        <a class="button button-active" href="#">В избранном</a>
         <div class="stars stars-four">
           <span class="visually-hidden">Звёзды</span>
         </div>
@@ -184,8 +183,8 @@
         <h3 class="cards-item-title">Desert Quail Inn</h3>
         <span class="cards-item-type">Гостиница</span>
         <span class="cards-item-price">От 2500 ₽</span>
-        <a class="button-primary button" href="#">Подробнее</a>
-        <a class="button-secondary button" href="#">В избранное</a>
+        <a class="button button-primary" href="#">подробнее</a>
+        <a class="button button-secondary" href="#">в избранное</a>
         <div class="stars stars-three">
           <span class="visually-hidden">Звёзды</span>
         </div>
@@ -196,8 +195,8 @@
         <h3 class="cards-item-title">GreenTree Inn</h3>
         <span class="cards-item-type">Гостиница</span>
         <span class="cards-item-price">От 1500 ₽</span>
-        <a class="button-primary button" href="#">Подробнее</a>
-        <a class="button-secondary button" href="#">В избранное</a>
+        <a class="button button-primary" href="#">Подробнее</a>
+        <a class="button button-secondary" href="#">В избранное</a>
         <div class="stars stars-two">
           <span class="visually-hidden">Звёзды</span>
         </div>
@@ -226,6 +225,7 @@
      </ul>
     </section>
     <section class="subscription subscription-inner" data-test="subscribe">
+      <div class="subscription-wrapper">
         <h2>Подпишитесь на рассылку</h2>
         <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
@@ -233,6 +233,7 @@
           <input class="field" type="email" name= "newsletter-email" id= "newsletter-email" placeholder="Ваш e-mail" required >
           <button class="button button-secondary" type="submit">Подписаться</button>
            </form>
+           </div>
         </section>
     </main>
     <footer class="page-footer" data-test="footer">
