--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header class="page-header" data-test="header">
      <nav class="navigation">
-       <a class="navigation-link" href="#">
+       <a class="navigation-logo" href="#">
         <img src="images/svg/logo-header.svg" width="140" height="70" alt="Логотип сайта Седона">
        </a>
        <ul class="navigation-list">
@@ -41,7 +41,7 @@
           </a>
         </li>
        </ul>
-       <a class="navigation-user-link button button-primary" href="#">Хочу сюда!</a>
+       <a class="button button-primary navigation-user-button" href="#">Хочу сюда!</a>
      </nav>
     </header>
     <main data-test="main">
@@ -50,7 +50,7 @@
         <img class="hero-image" src="images/svg/welcome.svg" width="458" height="352" alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!">
       </section>
       <section class="advantages" data-test="advantages">
-        <h2 class="advantages-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+        <h2 class="advantages-title">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</h2>
         <p class="advantages-text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         <ul class="advantages-list">
           <li class="advantages-item-image">
@@ -62,14 +62,14 @@
           </li>
           <li class="advantages-item">
             <h3>Небольшая площадь</h3>
-            <p>Все достопримечательности находятся очень близко</p>
+            <p>Все<br> достопримечательности находятся очень близко</p>
           </li>
           <li class="advantages-item">
             <h3>Красивая дорога</h3>
-            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            <p>Ехать в Седону из Лас-<br>Вегаса совсем не скучно!</p>
           </li>
           <li class="advantages-item">
-            <h3>Мало туристов</h3>
+            <h3>Мало<br> туристов</h3>
             <p>Большинство едет в Гранд Каньон и толпится там</p>
           </li>
           <li class="advantages-item-image advantages-item-reverse ">
@@ -83,7 +83,7 @@
         </section>
         <section class="advertising">
           <h2 class="visually-hidden">Реклама отелей Седоны</h2>
-        <p class="advertising-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
+        <p class="advertising-title">Приезжайте в Седону отдохнуть<br> в комфорте и уюте!</p>
         <p class="advertising-text">Опытный персонал и качественное обслуживание!</p>
         <ul class="advertising-list">
           <li class="advertising-item advertising-item-first">
@@ -111,17 +111,19 @@
       </section>
       <section class="search" data-test="search">
         <h2>Заинтересовались?</h2>
-        <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <p>Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <a class= "button button-primary search-link" href="#">Поиск Гостиницы в Седоне</a>
       </section>
       <section class="subscription" data-test="subscribe">
+        <div class="subscription-wrapper">
         <h2>Подпишитесь на рассылку</h2>
-        <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <p>Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
         <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
         <label for="newsletter-email" class="visually-hidden">Email</label>
           <input class="field" type="email" name= "newsletter-email" id= "newsletter-email" placeholder="Ваш e-mail" required >
           <button class="button button-secondary" type="submit">Подписаться</button>
            </form>
+           </div>
         </section>
     </main>
    <footer class="page-footer" data-test="footer">
