--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
        <a class="navigation-logo" href="#">
         <img src="images/svg/logo-header.svg" width="140" height="70" alt="Логотип сайта Седона">
        </a>
-       <ul class="navigation-list">
+       <ul class="navigation-list list-none">
         <li class="navigation-item active">
           <a class="navigation-link" href="#">Главная</a>
         </li>
@@ -22,7 +22,7 @@
           <a class="navigation-link" href="catalog.html">Гостиницы</a>
         </li>
        </ul>
-       <ul class="navigation-user-list">
+       <ul class="navigation-user-list list-none">
         <li class="navigation-user-item">
           <a class="navigation-user-link search-icon" href="#">
             <object type="image/svg+xml" data="images/svg/search.svg">
@@ -32,7 +32,7 @@
           </a>
         </li>
         <li class="navigation-user-item">
-          <a class="navigation-link favorite" href="#">
+          <a class="navigation-user-link favorite" href="#">
             <object type="image/svg+xml" data="images/svg/heart.svg">
              <img src="images/svg/heart.svg" alt="Лайки">
             </object>
@@ -41,7 +41,7 @@
           </a>
         </li>
        </ul>
-       <a class="button button-primary navigation-user-button" href="#">Хочу сюда!</a>
+       <a class="button button-primary button-small" href="#">Хочу сюда!</a>
      </nav>
     </header>
     <main data-test="main">
@@ -52,7 +52,7 @@
       <section class="advantages" data-test="advantages">
         <h2 class="advantages-title">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</h2>
         <p class="advantages-text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-        <ul class="advantages-list">
+        <ul class="advantages-list list-none">
           <li class="advantages-item-image">
             <div class="advantages-wrapper">
             <h3>Настоящий городок</h3>
@@ -62,11 +62,11 @@
           </li>
           <li class="advantages-item">
             <h3>Небольшая площадь</h3>
-            <p>Все<br> достопримечательности находятся очень близко</p>
+            <p>Все достопримечательности находятся очень близко</p>
           </li>
           <li class="advantages-item">
             <h3>Красивая дорога</h3>
-            <p>Ехать в Седону из Лас-<br>Вегаса совсем не скучно!</p>
+            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
           <li class="advantages-item">
             <h3>Мало<br> туристов</h3>
@@ -74,24 +74,24 @@
           </li>
           <li class="advantages-item-image advantages-item-reverse ">
              <div class="advantages-wrapper">
-            <h3>Там есть мост дьявола</h3>
+            <h3>Там есть<br> мост дьявола</h3>
             <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             </div>
             <img src="images/photo-2.jpg" width="800" height="385" alt="Место дьявола">
           </li>
         </ul>
         </section>
-        <section class="advertising">
+        <section class= "advertising">
           <h2 class="visually-hidden">Реклама отелей Седоны</h2>
         <p class="advertising-title">Приезжайте в Седону отдохнуть<br> в комфорте и уюте!</p>
         <p class="advertising-text">Опытный персонал и качественное обслуживание!</p>
-        <ul class="advertising-list">
+        <ul class="advertising-list list-none">
           <li class="advertising-item advertising-item-first">
             <object type="image/svg+xml" data="images/svg/icon-home.svg">
              <img src="images/svg/icon-home.svg" alt="Дом">
           </object>
             <h3>Жильё</h3>
-            <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            <p>Рекомендуем пожить<br> в настоящем мотеле, всё как в кино!</p>
           </li>
           <li class="advertising-item advertising-item-second">
              <object type="image/svg+xml" data="images/svg/icon-food.svg">
@@ -121,13 +121,13 @@
         <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
         <label for="newsletter-email" class="visually-hidden">Email</label>
           <input class="field" type="email" name= "newsletter-email" id= "newsletter-email" placeholder="Ваш e-mail" required >
-          <button class="button button-secondary" type="submit">Подписаться</button>
+          <button class="button button-large" type="submit">Подписаться</button>
            </form>
            </div>
         </section>
     </main>
    <footer class="page-footer" data-test="footer">
-     <ul class="social-list">
+     <ul class="social-list list-none">
       <li class="social-item">
         <a class="social-link" href="#">
           <object type="image/svg+xml" data="images/svg/vk.svg">
