--- a/catalog.html
+++ b/catalog.html
@@ -102,10 +102,10 @@
         <fieldset class="filter-group price">
           <legend class="group-title">Стоимость, ₽:</legend>
           <div class="price-input">
-            <label for="from">От</label>
-            <input type="number" id="from" name="from" min="0" max="10000" value="0">
-            <label for="to">До</label>
-            <input type="number" id="to" name="to" min="0" max="10000" value="9000">
+            <label class= "label-from" for="from">от</label>
+            <input class="input-from" type="number" id="from" name="from" min="0" max="10000" value="0">
+            <label class="label-to" for="to">до</label>
+            <input class="input-to" type="number" id="to" name="to" min="0" max="10000" value="9000">
           </div>
           <!--Шкалу потом переделаю при стилизации-->
           <div class="range-scale">
