--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
         <img class="hero-image" src="images/svg/welcome.svg" width="458" height="352" alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!">
       </section>
       <section class="advantages" data-test="advantages">
-        <h2 class="advantages-title">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</h2>
+        <h2 class="advantages-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
         <p class="advantages-text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         <ul class="advantages-list list-none">
-          <li class="advantages-item-image">
+          <li class="advantages-item advantages-item-image">
             <div class="advantages-wrapper">
             <h3>Настоящий городок</h3>
-            <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            <p>Седона — не аттракцион для туристов,там течёт своя жизнь</p>
             </div>
             <img src="images/photo-1.jpg" width="800" height="385" alt="Вид из окна на город">
           </li>
@@ -65,14 +65,14 @@
             <p>Все достопримечательности находятся очень близко</p>
           </li>
           <li class="advantages-item">
-            <h3>Красивая дорога</h3>
+            <h3>Красивая<br> дорога</h3>
             <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
           <li class="advantages-item">
             <h3>Мало<br> туристов</h3>
             <p>Большинство едет в Гранд Каньон и толпится там</p>
           </li>
-          <li class="advantages-item-image advantages-item-reverse ">
+          <li class="advantages-item advantages-item-image advantages-item-reverse ">
              <div class="advantages-wrapper">
             <h3>Там есть<br> мост дьявола</h3>
             <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
