--- a/catalog.html
+++ b/catalog.html
@@ -111,7 +111,7 @@
           <div class="range-scale">
             <input type="range" name="scale" id="scale" min="0" max="100" step="1" value="70">
           </div>
-          <div class="scale-progres"></div>
+          <div class="scale-progress"></div>
         </fieldset>
         <div class="filter-button">
             <button class="button button-secondary filter" type="button">Применить</button>
