--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Проект Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/svg/favicon.png">
   </head>
   <body>
   <header class="page-header" data-test="header">
@@ -79,7 +80,7 @@
             </li>
             <li class="group-item">
               <input type="checkbox" name="wi-fi" id="wi-fi">
-              <label for="wi-fi" class="input-text">Wi-Fi</wi-fi></label>
+              <label for="wi-fi" class="input-text">Wi-Fi</label>
             </li>
           </ul>
         </fieldset>
@@ -140,7 +141,7 @@
       <p class="sorting-result">Найдено гостиниц: 38</p>
      <select class="sorting" name="sorting" id="sorting">
       <option value="value1" selected>Сначала дешевые</option>
-      <option value="value2" selected>Сначала дорогие</option>
+      <option value="value2">Сначала дорогие</option>
      </select>
      <ul class="cards-view-list list-none">
       <li class="cards-view-item">
