--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Проект Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/svg/favicon.png">
   </head>
   <body>
     <header class="page-header" data-test="header">
@@ -167,7 +168,7 @@
           <span class="visually-hidden">Закрыть</span>
         </button>
         </div>
-        <section class="modal-content">
+        <div class="modal-content">
           <form class="searh-form" action="https://echo.htmlacademy.ru/" method="post">
           <div class="field-row-wrapper">
             <div class="field-date">
@@ -202,15 +203,17 @@
                   <span class="visually-hidden">Плюс</span>
                 </button>
             </div>
+
+
             <div class="children-wrapper">
              <label class="input-label input-label-children" for="children">Дети:</label>
               <div class="tooltip">
                <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-info">
                 <span class="visually-hidden">Информация</span>
-                <span class="tooltip-text tooltip-text-opened" id="tooltip-info" role="tooltip">
+              </button>
+              <span class="tooltip-text" id="tooltip-info" role="tooltip">
                 Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.
               </span>
-                </button>
               </div>
               <button class="button-field button-minus" type="button" >
                   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
@@ -226,8 +229,9 @@
                   <span class="visually-hidden">Плюс</span>
                 </button>
               </div>
+             </div>
             </form>
-          </section>
+          </div>
         <button class="button button-secondary button-modal" type="submit">Найти</button>
       </div>
     </div>
