--- a/catalog.html
+++ b/catalog.html
@@ -17,7 +17,7 @@
           <a class="navigation-link" href="index.html">Главная</a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link" href="#">О седоне</a>
+          <a class="navigation-link" href="#">О Седоне</a>
         </li>
         <li class="navigation-item active">
           <a class="navigation-link" href="catalog.html">Гостиницы</a>
@@ -85,7 +85,7 @@
           </ul>
         </fieldset>
         <fieldset class="filter-group type-housing">
-          <legend class="group-title">Тип жилья:</legend>
+          <legend class="group-title">Тип Жилья:</legend>
           <ul class="group-list list-none">
             <li class="group-item">
               <input type="radio" name="apartments-type" id="hotel" checked>
@@ -105,16 +105,16 @@
           <legend class="group-title">Стоимость, ₽:</legend>
         <div class="price-inputs">
           <div class="price-input">
-             <lable class= "label-from">
+             <label class= "label-from">
              <input class="input input-from" type="number" id="from" name="from" min="0" max="10000" value="0">
-             <span class="lable-input">от</span>
+             <span class="label-input">от</span>
              </label>
           </div>
           <div class="price-input">
               <label class="label-to" for="to">
               <input class="input input-to" type="number" id="to" name="to" min="0" max="10000" value="9000">
-              <span class="lable-input">до</span>
-              </label>
+              <span class="label-input">до</span>
+              </label>el
           </div>
         </div>
           <div class="range-scale">
@@ -147,12 +147,7 @@
       <li class="cards-view-item">
         <button class="cards-view-link active-card" type="button">
           <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <g clip-path="url(#clip0_172287_169)">
-            <path d="M4 0H0V6H4V0Z" fill="black" />
-            <path d="M16 0H12V6H16V0Z" fill="black" />
-            <path d="M10 0H6V6H10V0Z" fill="black" />
-            <path d="M4 8H0V14H4V8Z" fill="black" />
-            <path d="M16 8H12V14H16V8Z" fill="black" />
+            <g clip-path="url(#clip0_172287_169)"><path d="M4 0H0V6H4V0Z" fill="black" /><path d="M16 0H12V6H16V0Z" fill="black" /><path d="M10 0H6V6H10V0Z" fill="black" /><path d="M4 8H0V14H4V8Z" fill="black" /><path d="M16 8H12V14H16V8Z" fill="black" />
             <path d="M10 8H6V14H10V8Z" fill="black" />
             </g><defs><clipPath id="clip0_172287_169"><rect width="16" height="14" fill="white" /></clipPath></defs>
           </svg>
@@ -161,25 +156,16 @@
       </li>
       <li class="cards-view-item">
         <button class="cards-view-link" type="button">
-          <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-           <path d="M16 12H0V14H16V12Z" fill="black" />
-           <path d="M14 2V8H2V2H14ZM16 0H0V10H16V0Z" fill="black" />
+          <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16 12H0V14H16V12Z" fill="black" /><path d="M14 2V8H2V2H14ZM16 0H0V10H16V0Z" fill="black" />
           </svg>
            <span class="visually-hidden">Крупный значки</span>
         </button>
       </li>
       <li class="cards-view-item">
         <button class="cards-view-link" type="button">
-          <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-           <g clip-path="url(#clip0_172287_295)">
-           <path d="M2 0H0V2H2V0Z" fill="black" />
-           <path d="M16 0H4V2H16V0Z" fill="black" />
-           <path d="M2 4H0V6H2V4Z" fill="black" />
-           <path d="M16 4H4V6H16V4Z" fill="black" />
-           <path d="M2 8H0V10H2V8Z" fill="black" />
-           <path d="M16 8H4V10H16V8Z" fill="black" />
-           <path d="M2 12H0V14H2V12Z" fill="black" />
-           <path d="M16 12H4V14H16V12Z" fill="black" /></g><defs><clipPath id="clip0_172287_295"><rect width="16" height="14" fill="white" /></clipPath></defs>
+          <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#clip0_172287_295)"><path d="M2 0H0V2H2V0Z" fill="black" /><path d="M16 0H4V2H16V0Z" fill="black" />
+           <path d="M2 4H0V6H2V4Z" fill="black" /><path d="M16 4H4V6H16V4Z" fill="black" /><path d="M2 8H0V10H2V8Z" fill="black" /><path d="M16 8H4V10H16V8Z" fill="black" />
+           <path d="M2 12H0V14H2V12Z" fill="black" /><path d="M16 12H4V14H16V12Z" fill="black" /></g><defs><clipPath id="clip0_172287_295"><rect width="16" height="14" fill="white" /></clipPath></defs>
           </svg>
            <span class="visually-hidden">Отображение списком</span>
         </button>
