--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <a class="navigation-link" href="#">Главная</a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link" href="#">О седоне</a>
+          <a class="navigation-link" href="#">О Седоне</a>
         </li>
         <li class="navigation-item">
           <a class="navigation-link" href="catalog.html">Гостиницы</a>
@@ -160,8 +160,8 @@
       </svg>
     </a>
   </footer>
-    <div class="modal-container modal-container-opened">
-       <div class="modal modal-search">
+    <div class="modal-container">
+       <div class="modal">
         <div class="title-wrapper">
           <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
         <button class="modal-close-button">
@@ -203,8 +203,6 @@
                   <span class="visually-hidden">Плюс</span>
                 </button>
             </div>
-
-
             <div class="children-wrapper">
              <label class="input-label input-label-children" for="children">Дети:</label>
               <div class="tooltip">
